tests/NormalTests/paczka1/fuzzy1/40212501.err
Error in line 3: Adtc2tNi7K S921 46,7
Error in line 4: Adtc2tNi7K S78 15,8
Error in line 5: S578 S921 61,4
Error in line 11: 6zReI6yk0 S78 30,3
Error in line 21: kPfiVQExV S798 18,56
Error in line 36: Adtc2tNi7K Sm21 60,m
